--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pandas = "^1.0"
+scipy = "*"
+seaborn = "*"
+numpy = "^1.18"
 
 [tool.poetry.dev-dependencies]
 
