--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "data_analysis_with_python"
 version = "0.1.0"
-description = ""
+description = "my projects from freeCodeCamp course data analysis with Python"
 authors = ["Theresa M"]
 
 [tool.poetry.dependencies]
